[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "MempipedPath"
readme = "ReadMe.md"
description = "Just a helper library allowing you to interact with CLI tools and libs requiring files on disk rather in standard pipes."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pipe", "file"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KOLANICH-libs/MempipedPath.py"

[tool.setuptools]
zip-safe = true
py-modules = ["MempipedPath"]
include-package-data = false

[tool.setuptools_scm]
