[metadata]
name = MempipedPath
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/MempipedPath.py
description = Just a helper library allowing you to interact with CLI tools and libs requiring files on disk rather in standard pipes.
long_description = file: ReadMe.md
keywords = pipe, file
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: Linux
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
py_modules = MempipedPath
setup_requires = setuptools_scm;
